--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,13 @@ edition = "2018"
 actix = "0.9.0"
 actix-web = "2.0"
 actix-web-actors = "2.0.0"
+actix-rt = "1.0.0"
 
 json = "0.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-futures = "0.1"
+futures = "0.3.4"
 
 tokio = { version = "0.2.11", features = ["full"] }
 
